--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="showcase">
       <div class="container">
         <div class="showcase-content">
-          <h1><span class="text-primary">Purva</span> Septic Tank Cleaning Service</h1>
+          <h1><span class="text-h1">Purva</span> Septic Tank Cleaning Service</h1>
           <p class="lead">Your professional partner for cleaning toilet tank.</p>
           <a class="btn" href="#contact-info">Contact Us</a>
         </div>
