--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <section id="about-info" class="bg-light py-3">
       <div class="container">
         <div class="info-left">
-          <h1 class="l-heading about-heading"><span class="text-primary">About</span> Purva Enterprises</h1>
+          <h1 class="l-heading about-heading"><span class="text-h1">About</span> Purva Enterprises</h1>
           <p>We are one of the leading commercial septic tank cleaning services in Aangav, Bhiwandi. Purva Septic Tank Cleaning Services offers all Domestic, Residential, Industrial Drainage Cleaning - Cumboard Jam Cleaning, Pipe Jamming Cleaning and Under Ground Cleaning Services in Aangaon, Bhiwandi.</p>
               <p>When you're looking for a septic tank cleaning service, it's important to find one that offers both septic tank cleaning and pumping so you can get the well-rounded service you deserve.</p>
               <h2 class="py-3">Reliable septic solutions for residential systems</h2>
